cmake_minimum_required(VERSION 3.9)
project(mediasoup)

set(CMAKE_CXX_STANDARD 11)

include_directories(${CMAKE_SOURCE_DIR}/include)
set(SRC_PATH ${CMAKE_SOURCE_DIR}/src)

add_library(worker
        ${SRC_PATH}/DepLibSRTP.cpp
        ${SRC_PATH}/DepLibUV.cpp
        ${SRC_PATH}/DepOpenSSL.cpp
        ${SRC_PATH}/Logger.cpp
        ${SRC_PATH}/Settings.cpp
        ${SRC_PATH}/Worker.cpp
        ${SRC_PATH}/Channel/Notifier.cpp
        ${SRC_PATH}/Channel/Request.cpp
        ${SRC_PATH}/Channel/UnixStreamSocket.cpp
        ${SRC_PATH}/RTC/Consumer.cpp
        ${SRC_PATH}/RTC/DtlsTransport.cpp
        ${SRC_PATH}/RTC/IceCandidate.cpp
        ${SRC_PATH}/RTC/IceServer.cpp
        ${SRC_PATH}/RTC/NackGenerator.cpp
        ${SRC_PATH}/RTC/PlainRtpTransport.cpp
        ${SRC_PATH}/RTC/Producer.cpp
        ${SRC_PATH}/RTC/Router.cpp
        ${SRC_PATH}/RTC/RtpListener.cpp
        ${SRC_PATH}/RTC/RtpMonitor.cpp
        ${SRC_PATH}/RTC/RtpPacket.cpp
        ${SRC_PATH}/RTC/RtpStream.cpp
        ${SRC_PATH}/RTC/RtpStreamRecv.cpp
        ${SRC_PATH}/RTC/RtpStreamSend.cpp
        ${SRC_PATH}/RTC/RtpDataCounter.cpp
        ${SRC_PATH}/RTC/SeqManager.cpp
        ${SRC_PATH}/RTC/SrtpSession.cpp
        ${SRC_PATH}/RTC/StunMessage.cpp
        ${SRC_PATH}/RTC/TcpConnection.cpp
        ${SRC_PATH}/RTC/TcpServer.cpp
        ${SRC_PATH}/RTC/Transport.cpp
        ${SRC_PATH}/RTC/TransportTuple.cpp
        ${SRC_PATH}/RTC/UdpSocket.cpp
        ${SRC_PATH}/RTC/WebRtcTransport.cpp
        ${SRC_PATH}/RTC/Codecs/Codecs.cpp
        ${SRC_PATH}/RTC/Codecs/H264.cpp
        ${SRC_PATH}/RTC/Codecs/VP8.cpp
        ${SRC_PATH}/RTC/RtpDictionaries/Media.cpp
        ${SRC_PATH}/RTC/RtpDictionaries/Parameters.cpp
        ${SRC_PATH}/RTC/RtpDictionaries/RtcpFeedback.cpp
        ${SRC_PATH}/RTC/RtpDictionaries/RtcpParameters.cpp
        ${SRC_PATH}/RTC/RtpDictionaries/RtpCodecMimeType.cpp
        ${SRC_PATH}/RTC/RtpDictionaries/RtpCodecParameters.cpp
        ${SRC_PATH}/RTC/RtpDictionaries/RtpEncodingParameters.cpp
        ${SRC_PATH}/RTC/RtpDictionaries/RtpFecParameters.cpp
        ${SRC_PATH}/RTC/RtpDictionaries/RtpHeaderExtensionParameters.cpp
        ${SRC_PATH}/RTC/RtpDictionaries/RtpHeaderExtensionUri.cpp
        ${SRC_PATH}/RTC/RtpDictionaries/RtpParameters.cpp
        ${SRC_PATH}/RTC/RtpDictionaries/RtpRtxParameters.cpp
        ${SRC_PATH}/RTC/RTCP/Packet.cpp
        ${SRC_PATH}/RTC/RTCP/CompoundPacket.cpp
        ${SRC_PATH}/RTC/RTCP/SenderReport.cpp
        ${SRC_PATH}/RTC/RTCP/ReceiverReport.cpp
        ${SRC_PATH}/RTC/RTCP/Sdes.cpp
        ${SRC_PATH}/RTC/RTCP/Bye.cpp
        ${SRC_PATH}/RTC/RTCP/Feedback.cpp
        ${SRC_PATH}/RTC/RTCP/FeedbackPs.cpp
        ${SRC_PATH}/RTC/RTCP/FeedbackRtp.cpp
        ${SRC_PATH}/RTC/RTCP/FeedbackRtpNack.cpp
        ${SRC_PATH}/RTC/RTCP/FeedbackRtpTmmb.cpp
        ${SRC_PATH}/RTC/RTCP/FeedbackRtpSrReq.cpp
        ${SRC_PATH}/RTC/RTCP/FeedbackRtpTllei.cpp
        ${SRC_PATH}/RTC/RTCP/FeedbackRtpEcn.cpp
        ${SRC_PATH}/RTC/RTCP/FeedbackPsPli.cpp
        ${SRC_PATH}/RTC/RTCP/FeedbackPsSli.cpp
        ${SRC_PATH}/RTC/RTCP/FeedbackPsRpsi.cpp
        ${SRC_PATH}/RTC/RTCP/FeedbackPsFir.cpp
        ${SRC_PATH}/RTC/RTCP/FeedbackPsTst.cpp
        ${SRC_PATH}/RTC/RTCP/FeedbackPsVbcm.cpp
        ${SRC_PATH}/RTC/RTCP/FeedbackPsLei.cpp
        ${SRC_PATH}/RTC/RTCP/FeedbackPsAfb.cpp
        ${SRC_PATH}/RTC/RTCP/FeedbackPsRemb.cpp
        ${SRC_PATH}/RTC/RemoteBitrateEstimator/AimdRateControl.cpp
        ${SRC_PATH}/RTC/RemoteBitrateEstimator/InterArrival.cpp
        ${SRC_PATH}/RTC/RemoteBitrateEstimator/OveruseDetector.cpp
        ${SRC_PATH}/RTC/RemoteBitrateEstimator/OveruseEstimator.cpp
        ${SRC_PATH}/RTC/RemoteBitrateEstimator/RemoteBitrateEstimatorAbsSendTime.cpp
        ${SRC_PATH}/RTC/RemoteBitrateEstimator/RemoteBitrateEstimatorSingleStream.cpp
        ${SRC_PATH}/Utils/Crypto.cpp
        ${SRC_PATH}/Utils/File.cpp
        ${SRC_PATH}/Utils/IP.cpp
        ${SRC_PATH}/handles/SignalsHandler.cpp
        ${SRC_PATH}/handles/TcpConnection.cpp
        ${SRC_PATH}/handles/TcpServer.cpp
        ${SRC_PATH}/handles/Timer.cpp
        ${SRC_PATH}/handles/UdpSocket.cpp
        ${SRC_PATH}/handles/UnixStreamSocket.cpp
        )

add_executable(mediasoup ${SRC_PATH}/main.cpp)
target_link_libraries(mediasoup ${worker})
